# entraid-mcp-server

./: pyproject.toml
src/msgraph_mcp_server/resources/: applications.py  groups.py  service_principals.py
tests/: conftest.py  test_groups.py
