[project]
name = "entraid-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-core>=1.33.0",
    "azure-identity>=1.21.0",
    "mcp[cli]>=1.6.0",
    "msgraph-core>=1.3.3",
    "msgraph-sdk>=1.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# src is on the path for `import msgraph_mcp_server...`; src/msgraph_mcp_server is
# on the path because internal modules import siblings as top-level packages
# (e.g. `from utils.graph_client import GraphClient`, `from auth... import ...`).
pythonpath = ["src", "src/msgraph_mcp_server"]
